--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 Experience the opulence of India’s heritage. Our premium instant premix brings the refined flavors of royal households directly to your cup.
             </p>
             
-            <div class="launch-badge">Launching Autumn 2026</div>
+            <div class="launch-badge">Launching Soon</div>
 
             <div id="signup-container">
                 <form id="email-form">
